--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
       j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
       'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
       })(window,document,'script','dataLayer','GTM-P2C68NG');</script>
+    <script data-ad-client="ca-pub-5434103967831676" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="phong.css">
     <link rel="stylesheet" href="tablet.css">
